--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.4.0",
     "globals": "^15.8.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript-eslint": "^7.16.1"
   }
 }
